--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="Kimberly's GitHub Page"
       content="HTML & CSS webpage hosted on GitHub Pages"
     />
+    <link rel="stylesheet" href="index.css">
     <title>Kimberly's GitHub Page</title>
   </head>
   <body>
