--- a/index.html
+++ b/index.html
@@ -3,15 +3,78 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="Kimberly's GitHub Page"
       content="HTML & CSS webpage hosted on GitHub Pages"
     />
-    <link rel="stylesheet" href="index.css">
     <title>Kimberly's GitHub Page</title>
   </head>
+
   <body>
-    <p>Hello, World!</p>
-  </body>
+    <div id="title">
+      <h1>kimberly horton</h1>
+      <h2>a sample HTML/CSS website</h2>
+    </div>
+
+    <div class="center-p">
+      <p>Hello, World!</p>
+      <hr>
+      <p>Coding Experience:
+      <ul>
+        <li>Java</li>
+        <ul><li class="sub-li">JavaFX</li></ul>
+        <li>Kotlin</li>
+        <ul><li class="sub-li">TornadoFX</li></ul>
+        <li>Scala</li>
+        <li>Python</li>
+        <ul><li class="sub-li">SciKitLearn</li></ul>
+        <li>HTML/CSS</li>
+        <li>JavaScript</li>
+        <ul><li class="sub-li">ReactJS</li>
+          <li class="sub-li">Node.js</li></ul>
+      </ul>
+    </p>
+    </div>
+    <br>
+    <div class="center-p">
+      <h1>Projects I've Worked On:</h1>
+
+      <!-- ISS in CSS -->
+      <h2>ISS in CSS</h2>
+      <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="ajrMJw" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="ISS in CSS">
+      <span>See the Pen <a href="https://codepen.io/k-horton/pen/ajrMJw">
+  ISS in CSS</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+      </p>
+      <hr>
+
+      <!-- Wikipedia Searcher -->
+      <h2>Wikipedia Reader</h2>
+      <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="MXWgbP" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Wikipedia Viewer">
+      <span>See the Pen <a href="https://codepen.io/k-horton/pen/MXWgbP">
+  Wikipedia Viewer</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+      </p>
+      <hr>
+
+      <!-- Weather -->
+      <h2>Weather App</h2>
+      <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="OZqzWo" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Weather or Not">
+        <span>See the Pen <a href="https://codepen.io/k-horton/pen/OZqzWo">
+  Weather or Not</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+      </p>
+
+      <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+    </div><br>
+
+    <!-- RIGHT SIDEBAR -->
+    <div class="right-margin">
+      <h1>Tweet Tweet</h1>
+      <a class="twitter-timeline" data-height="600" href="https://twitter.com/kimboleh?ref_src=twsrc%5Etfw">Tweets by kimboleh</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+
+    </body>
 </html>
