added tabs feature

--- a/index.html
+++ b/index.html
@@ -18,57 +18,86 @@
       <h2>a sample HTML/CSS website</h2>
     </div>
 
-    <div class="center-p">
-      <p>Hello, World!</p>
-      <hr>
-      <p>Coding Experience:
-      <ul>
-        <li>Java</li>
-        <ul><li class="sub-li">JavaFX</li></ul>
-        <li>Kotlin</li>
-        <ul><li class="sub-li">TornadoFX</li></ul>
-        <li>Scala</li>
-        <li>Python</li>
-        <ul><li class="sub-li">SciKitLearn</li></ul>
-        <li>HTML/CSS</li>
-        <li>JavaScript</li>
-        <ul><li class="sub-li">ReactJS</li>
-          <li class="sub-li">Node.js</li></ul>
-      </ul>
-    </p>
+    <div class="tabs center-p">
+
+      <input type="radio" name="tabs" id="welcome" checked="checked">
+      <label class="tab-label" for="welcome">About Me</label>
+      <div class="tab">
+        <p>Hello, World!</p>
+        <hr>
+        <p>Coding Experience:
+        <ul>
+          <li>Java</li>
+          <ul><li class="sub-li">JavaFX</li></ul>
+          <li>Kotlin</li>
+          <ul><li class="sub-li">TornadoFX</li></ul>
+          <li>Scala</li>
+          <li>Python</li>
+          <ul><li class="sub-li">SciKitLearn</li></ul>
+          <li>HTML/CSS</li>
+          <li>JavaScript</li>
+          <ul><li class="sub-li">ReactJS</li>
+            <li class="sub-li">Node.js</li></ul>
+        </ul>
+      </p>
+      </div>
+
+      <input type="radio" name="tabs" id="portfolio">
+      <label class="tab-label" for="portfolio">Portfolio</label>
+      <div class="tab">
+        <h1>Projects I've Worked On:</h1>
+
+        <div class="codepen">
+          <!-- ISS in CSS -->
+          <h2>ISS in CSS</h2>
+          <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="ajrMJw" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="ISS in CSS">
+          <span>See the Pen <a href="https://codepen.io/k-horton/pen/ajrMJw">
+      ISS in CSS</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
+      on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <hr>
+
+          <!-- Wikipedia Searcher -->
+          <h2>Wikipedia Reader</h2>
+          <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="MXWgbP" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Wikipedia Viewer">
+          <span>See the Pen <a href="https://codepen.io/k-horton/pen/MXWgbP">
+      Wikipedia Viewer</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
+      on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <hr>
+
+          <!-- Weather -->
+          <h2>Weather App</h2>
+          <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="OZqzWo" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Weather or Not">
+            <span>See the Pen <a href="https://codepen.io/k-horton/pen/OZqzWo">
+      Weather or Not</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
+      on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+
+          <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+        </div>
+      </div>
+
+      <input type="radio" name="tabs" id="contact-me">
+      <label class="tab-label" for="contact-me">Contact Me</label>
+      <div class="tab">
+        <h1>Contact Me</h1>
+
+        <form method="POST" action="http://jorr.cs.georgefox.edu/resources/php/echo-form.php">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name"><br><br>
+
+          <label for="email">Email:</label>
+          <input type="text" id="email" name="email"><br><br>
+
+          <label for="message">Message:</label>
+          <input type="textarea" id="message" name="message"><br><br>
+
+          <button type="submit">Submit</button>
+        </form>
+
+      </div>
     </div>
-    <br>
-    <div class="center-p">
-      <h1>Projects I've Worked On:</h1>
-
-      <!-- ISS in CSS -->
-      <h2>ISS in CSS</h2>
-      <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="ajrMJw" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="ISS in CSS">
-      <span>See the Pen <a href="https://codepen.io/k-horton/pen/ajrMJw">
-  ISS in CSS</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-      </p>
-      <hr>
-
-      <!-- Wikipedia Searcher -->
-      <h2>Wikipedia Reader</h2>
-      <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="MXWgbP" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Wikipedia Viewer">
-      <span>See the Pen <a href="https://codepen.io/k-horton/pen/MXWgbP">
-  Wikipedia Viewer</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-      </p>
-      <hr>
-
-      <!-- Weather -->
-      <h2>Weather App</h2>
-      <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="OZqzWo" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Weather or Not">
-        <span>See the Pen <a href="https://codepen.io/k-horton/pen/OZqzWo">
-  Weather or Not</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-      </p>
-
-      <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
-    </div><br>
 
     <!-- RIGHT SIDEBAR -->
     <div class="right-margin">
