added images and gcsp page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <body>
     <div id="title">
       <h1>kimberly horton</h1>
-      <h2>a sample HTML/CSS website</h2>
+      <h2>a sample" HTML/CSS website</h2>
+      <h3><a href="gcsp.html">GCSP</a>
     </div>
 
     <div class="tabs center-p">
@@ -97,6 +98,13 @@
         </form>
 
       </div>
+    </div>
+
+    <!-- BOTTOM LEFT ICONS -->
+    <div class="icon-bar">
+      <a href="https://www.linkedin.com/in/kimberly-anne/"><img src="img/linkedin.png"></a>
+      <a href="https://github.com/k-horton"><img src="img/github.png"></a>
+      <a href="mailto:kimberlyannehorton@gmail.com"><img src="img/email.png"></a>
     </div>
 
     <!-- RIGHT SIDEBAR -->
