--- a/gcsp.html
+++ b/gcsp.html
@@ -13,22 +13,28 @@
   </head>
 
   <body>
-    <div id="title">
+    <div id="sidebar">
       <h1>kimberly horton</h1>
       <h2>Grand Challenge Scholars Program</h2>
-      <h3><a href="index.html">Home</a>
+      <h3><a href="index.html">Home</a></h3>
     </div>
 
     <div class="tabs center-p">
-      <div id="water">
+      <div>
         <img src="img/water.png" height=50px>
-        <h1>Provide Access to Clean Water</h1>
-        <p>Text about clean water here.</p>
+        <h1 class="gc-title">Provide Access to Clean Water</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis volutpat quis urna sodales aliquam. Duis ipsum sem, porta sed maximus nec, efficitur id ipsum. Maecenas malesuada leo volutpat justo pellentesque posuere. In mauris augue, pulvinar id odio at, laoreet accumsan lacus. Sed imperdiet ex odio, dictum congue enim sagittis ut. Pellentesque at orci ut eros volutpat porttitor eget id sapien. Sed vitae eros diam. Praesent ut sem non purus volutpat mollis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec dapibus velit in erat pretium placerat.</p>
+
+          <p>Integer vel urna fermentum diam suscipit pretium. Suspendisse vulputate varius lorem vitae lobortis. Maecenas vel enim eget nunc congue cursus. Nulla porttitor porttitor nisi vitae fringilla. In auctor commodo ullamcorper. Duis sit amet sapien ut lorem cursus tempor. Sed et nibh nulla.</p>
       </div>
-      <div id="learning">
+      <div>
         <img src="img/learning.png" height=50px>
-        <h1>Advance Personalized Learning</h1>
-        <p>Text about personalized learning here.</p>
+        <h1 class="gc-title">Advance Personalized Learning</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis volutpat quis urna sodales aliquam. Duis ipsum sem, porta sed maximus nec, efficitur id ipsum. Maecenas malesuada leo volutpat justo pellentesque posuere. In mauris augue, pulvinar id odio at, laoreet accumsan lacus. Sed imperdiet ex odio, dictum congue enim sagittis ut. Pellentesque at orci ut eros volutpat porttitor eget id sapien. Sed vitae eros diam. Praesent ut sem non purus volutpat mollis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec dapibus velit in erat pretium placerat.</p>
+
+        <p>Integer vel urna fermentum diam suscipit pretium. Suspendisse vulputate varius lorem vitae lobortis. Maecenas vel enim eget nunc congue cursus. Nulla porttitor porttitor nisi vitae fringilla. In auctor commodo ullamcorper. Duis sit amet sapien ut lorem cursus tempor. Sed et nibh nulla.</p>
+
+        <p>Sed lorem ipsum, efficitur non eros sit amet, imperdiet finibus metus. Nullam semper consectetur sodales. In hac habitasse platea dictumst. Nullam ac turpis commodo, tristique dolor id, venenatis augue. Duis aliquam justo eu nulla euismod, et maximus leo congue. Maecenas venenatis, dui et scelerisque scelerisque, nunc mauris mattis nisi, id bibendum massa nulla non dolor. Proin ornare nunc et sapien malesuada ultrices. Integer egestas, quam sed aliquet laoreet, turpis mauris convallis ligula, a faucibus lectus dui in justo. Mauris diam leo, vulputate sed blandit eu, porta a ex. Donec pharetra nibh diam, sed elementum nisi tempus eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla metus tortor, rutrum eu tristique ut, iaculis a neque. Vivamus a odio ullamcorper, porta purus eget, cursus augue. Suspendisse at tellus nunc.</p?
       </div>
     </div>
 
