added mission statement

--- a/gcsp.html
+++ b/gcsp.html
@@ -22,18 +22,28 @@
       </div>
     </div>
 
-      <div id="challenge-squares">
-      <div class="grand-challenge water center-p">
-        <img src="img/water.png" height=50px>
-        <h1>Provide Access to Clean Water</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis volutpat quis urna sodales aliquam. Duis ipsum sem, porta sed maximus nec, efficitur id ipsum. Maecenas malesuada leo volutpat justo pellentesque posuere. In mauris augue, pulvinar id odio at, laoreet accumsan lacus. Sed imperdiet ex odio, dictum congue enim sagittis ut. Pellentesque at orci ut eros volutpat porttitor eget id sapien. Sed vitae eros diam. Praesent ut sem non purus volutpat mollis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec dapibus velit in erat pretium placerat.</p>
+    <div id="body">
+      <div class="center-p">
+        <h1>Mission Statement</h1>
+        <img id="profile-pic" src="img/kimberly.jpg">
+        <p>I am a Christian, student, and programmer in Portland, Oregon with homes around the world in Malaysia, Jordan, and across the United States.</p>
+        <p>I am a lifelong follower of Christ, and I believe his call to serve the poor and underprivileged was meant to be taken seriously. I also believe there is great need in the humanitarian sector for technical experience to come alongside existing efforts in communication and fieldwork; I seek to use my technical experience to bring efficiency and new solutions to those already on the front lines fighting for justice and human flourishing.</p>
+        <p>Technology is a powerful tool, and I believe it should be harnessed and stewarded responsibly to the benefit of the world at large. I hope to be a part of the movements working for justice and against suffering by learning to steward technology rightly and using it to advance quality of life around the world.</p>
       </div>
 
-      <div class="grand-challenge learning center-p">
-        <img src="img/learning.png" height=50px>
-        <h1>Advance Personalized Learning</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis volutpat quis urna sodales aliquam. Duis ipsum sem, porta sed maximus nec, efficitur id ipsum. Maecenas malesuada leo volutpat justo pellentesque posuere. In mauris augue, pulvinar id odio at, laoreet accumsan lacus. Sed imperdiet ex odio, dictum congue enim sagittis ut. Pellentesque at orci ut eros volutpat porttitor eget id sapien. Sed vitae eros diam. Praesent ut sem non purus volutpat mollis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec dapibus velit in erat pretium placerat.</p>
+        <div id="challenge-squares">
+        <div class="grand-challenge water center-p">
+          <img src="img/water.png" height=50px>
+          <h1>Provide Access to Clean Water</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis volutpat quis urna sodales aliquam. Duis ipsum sem, porta sed maximus nec, efficitur id ipsum. Maecenas malesuada leo volutpat justo pellentesque posuere. In mauris augue, pulvinar id odio at, laoreet accumsan lacus. Sed imperdiet ex odio, dictum congue enim sagittis ut. Pellentesque at orci ut eros volutpat porttitor eget id sapien. Sed vitae eros diam. Praesent ut sem non purus volutpat mollis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec dapibus velit in erat pretium placerat.</p>
+        </div>
 
+        <div class="grand-challenge learning center-p">
+          <img src="img/learning.png" height=50px>
+          <h1>Advance Personalized Learning</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis volutpat quis urna sodales aliquam. Duis ipsum sem, porta sed maximus nec, efficitur id ipsum. Maecenas malesuada leo volutpat justo pellentesque posuere. In mauris augue, pulvinar id odio at, laoreet accumsan lacus. Sed imperdiet ex odio, dictum congue enim sagittis ut. Pellentesque at orci ut eros volutpat porttitor eget id sapien. Sed vitae eros diam. Praesent ut sem non purus volutpat mollis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec dapibus velit in erat pretium placerat.</p>
+
+        </div>
       </div>
     </div>
 
