switched homepage to CSS grid

--- a/index.html
+++ b/index.html
@@ -13,105 +13,106 @@
   </head>
 
   <body>
-    <div id="title">
-      <h1>kimberly horton</h1>
-      <h2>a sample" HTML/CSS website</h2>
-      <h3><a href="gcsp.html">GCSP</a>
-    </div>
+    <div id="grid-layout">
 
-    <div class="tabs center-p">
-
-      <input type="radio" name="tabs" id="welcome" checked="checked">
-      <label class="tab-label" for="welcome">About Me</label>
-      <div class="tab">
-        <p>Hello, World!</p>
-        <hr>
-        <p>Coding Experience:
-        <ul>
-          <li>Java</li>
-          <ul><li class="sub-li">JavaFX</li></ul>
-          <li>Kotlin</li>
-          <ul><li class="sub-li">TornadoFX</li></ul>
-          <li>Scala</li>
-          <li>Python</li>
-          <ul><li class="sub-li">SciKitLearn</li></ul>
-          <li>HTML/CSS</li>
-          <li>JavaScript</li>
-          <ul><li class="sub-li">ReactJS</li>
-            <li class="sub-li">Node.js</li></ul>
-        </ul>
-      </p>
+      <!-- SIDEBAR -->
+      <div id="sidebar">
+        <h1>kimberly horton</h1>
+        <h2>GitHub Pages Home</h2>
+        <a href="/"><div class="sidebar-link sidebar-current">Home</div></a>
+        <a href="gcsp.html"><div class="sidebar-link">GCSP</div></a>
       </div>
 
-      <input type="radio" name="tabs" id="portfolio">
-      <label class="tab-label" for="portfolio">Portfolio</label>
-      <div class="tab">
-        <h1>Projects I've Worked On:</h1>
+      <!-- BODY -->
+      <div id="main-content">
 
-        <div class="codepen">
-          <!-- ISS in CSS -->
-          <h2>ISS in CSS</h2>
-          <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="ajrMJw" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="ISS in CSS">
-          <span>See the Pen <a href="https://codepen.io/k-horton/pen/ajrMJw">
-      ISS in CSS</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
-      on <a href="https://codepen.io">CodePen</a>.</span>
+        <div id="tabs" class="tabs center-p">
+          <input type="radio" name="tabs" id="welcome" checked="checked">
+          <label class="tab-label" for="welcome">About Me</label>
+          <div class="tab">
+            <p>Hello, World!</p>
+            <hr>
+            <p>Coding Experience:
+            <ul>
+              <li>Java</li>
+              <ul><li class="sub-li">JavaFX</li></ul>
+              <li>Kotlin</li>
+              <ul><li class="sub-li">TornadoFX</li></ul>
+              <li>Scala</li>
+              <li>Python</li>
+              <ul><li class="sub-li">SciKitLearn</li></ul>
+              <li>HTML/CSS</li>
+              <li>JavaScript</li>
+              <ul><li class="sub-li">ReactJS</li>
+                <li class="sub-li">Node.js</li></ul>
+            </ul>
           </p>
-          <hr>
+          </div>
 
-          <!-- Wikipedia Searcher -->
-          <h2>Wikipedia Reader</h2>
-          <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="MXWgbP" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Wikipedia Viewer">
-          <span>See the Pen <a href="https://codepen.io/k-horton/pen/MXWgbP">
-      Wikipedia Viewer</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
-      on <a href="https://codepen.io">CodePen</a>.</span>
-          </p>
-          <hr>
+          <input type="radio" name="tabs" id="portfolio">
+          <label class="tab-label" for="portfolio">Portfolio</label>
+          <div class="tab">
+            <h1>Projects I've Worked On:</h1>
 
-          <!-- Weather -->
-          <h2>Weather App</h2>
-          <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="OZqzWo" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Weather or Not">
-            <span>See the Pen <a href="https://codepen.io/k-horton/pen/OZqzWo">
-      Weather or Not</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
-      on <a href="https://codepen.io">CodePen</a>.</span>
-          </p>
+            <div class="codepen">
+              <!-- ISS in CSS -->
+              <h2>ISS in CSS</h2>
+              <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="ajrMJw" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="ISS in CSS">
+              <span>See the Pen <a href="https://codepen.io/k-horton/pen/ajrMJw">
+          ISS in CSS</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
+          on <a href="https://codepen.io">CodePen</a>.</span>
+              </p>
+              <hr>
 
-          <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+              <!-- Wikipedia Searcher -->
+              <h2>Wikipedia Reader</h2>
+              <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="MXWgbP" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Wikipedia Viewer">
+              <span>See the Pen <a href="https://codepen.io/k-horton/pen/MXWgbP">
+          Wikipedia Viewer</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
+          on <a href="https://codepen.io">CodePen</a>.</span>
+              </p>
+              <hr>
+
+              <!-- Weather -->
+              <h2>Weather App</h2>
+              <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="result" data-user="k-horton" data-slug-hash="OZqzWo" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Weather or Not">
+                <span>See the Pen <a href="https://codepen.io/k-horton/pen/OZqzWo">
+          Weather or Not</a> by Kimberly Horton (<a href="https://codepen.io/k-horton">@k-horton</a>)
+          on <a href="https://codepen.io">CodePen</a>.</span>
+              </p>
+
+              <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+            </div>
+          </div>
+
+          <input type="radio" name="tabs" id="contact-me">
+          <label class="tab-label" for="contact-me">Contact Me</label>
+          <div class="tab">
+            <h1>Contact Me</h1>
+
+            <form method="POST" action="http://jorr.cs.georgefox.edu/resources/php/echo-form.php">
+              <label for="name">Name:</label>
+              <input type="text" id="name" name="name"><br><br>
+
+              <label for="email">Email:</label>
+              <input type="text" id="email" name="email"><br><br>
+
+              <label for="message">Message:</label>
+              <input type="textarea" id="message" name="message"><br><br>
+
+              <button type="submit">Submit</button>
+            </form>
+
+          </div>
         </div>
       </div>
 
-      <input type="radio" name="tabs" id="contact-me">
-      <label class="tab-label" for="contact-me">Contact Me</label>
-      <div class="tab">
-        <h1>Contact Me</h1>
-
-        <form method="POST" action="http://jorr.cs.georgefox.edu/resources/php/echo-form.php">
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name"><br><br>
-
-          <label for="email">Email:</label>
-          <input type="text" id="email" name="email"><br><br>
-
-          <label for="message">Message:</label>
-          <input type="textarea" id="message" name="message"><br><br>
-
-          <button type="submit">Submit</button>
-        </form>
-
+      <!-- BOTTOM LEFT ICONS -->
+      <div class="icon-bar">
+        <a href="https://www.linkedin.com/in/kimberly-anne/"><img src="img/linkedin.png"></a>
+        <a href="https://github.com/k-horton"><img src="img/github.png"></a>
+        <a href="mailto:kimberlyannehorton@gmail.com"><img src="img/email.png"></a>
       </div>
     </div>
-
-    <!-- BOTTOM LEFT ICONS -->
-    <div class="icon-bar">
-      <a href="https://www.linkedin.com/in/kimberly-anne/"><img src="img/linkedin.png"></a>
-      <a href="https://github.com/k-horton"><img src="img/github.png"></a>
-      <a href="mailto:kimberlyannehorton@gmail.com"><img src="img/email.png"></a>
-    </div>
-
-    <!-- RIGHT SIDEBAR -->
-    <div class="right-margin">
-      <h1>Tweet Tweet</h1>
-      <a class="twitter-timeline" data-height="600" href="https://twitter.com/kimboleh?ref_src=twsrc%5Etfw">Tweets by kimboleh</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-
     </body>
 </html>
