--- a/gcsp.html
+++ b/gcsp.html
@@ -16,10 +16,8 @@
     <div id="sidebar">
       <h1>kimberly horton</h1>
       <h2>Grand Challenge Scholars Program</h2>
-      <div class="sidebar-link"><a href="index.html">Home</a></div>
-      <div class="sidebar-link sidebar-current">
-        <a href="/">GCSP</a>
-      </div>
+      <a href="index.html"><div class="sidebar-link">Home</div></a>
+      <a href="/"><div class="sidebar-link sidebar-current">GCSP</div></a>
     </div>
 
     <div id="body">
