made homepage actually look good

--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
       <!-- BODY -->
       <div id="main-content">
 
-        <div id="tabs" class="tabs center-p">
+        <div id="welcome-splash" class="center-p">
+          <h1>Welcome to my GitHub Pages!</h1>
+          <p>My name is Kimberly Horton, and I'm a Computer Science student at George Fox University.</p>
+          <p>This site, while a work in progress, is currently serving as a portfolio for my CSIS304 class,
+            <em>Web-Based Programming</em>. Below you'll find some of my skills and projects, and to the
+            left in the sidebar you'll find links to each page of my class portfolio!</p>
+        </div>
+
+        <div id="tabs" class="tabs">
           <input type="radio" name="tabs" id="welcome" checked="checked">
           <label class="tab-label" for="welcome">About Me</label>
           <div class="tab">
