index.html meets W3 guidelines

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
@@ -40,21 +40,20 @@
           <div class="tab">
             <p>Hello, World!</p>
             <hr>
-            <p>Coding Experience:
-            <ul>
-              <li>Java</li>
-              <ul><li class="sub-li">JavaFX</li></ul>
-              <li>Kotlin</li>
-              <ul><li class="sub-li">TornadoFX</li></ul>
-              <li>Scala</li>
-              <li>Python</li>
-              <ul><li class="sub-li">SciKitLearn</li></ul>
-              <li>HTML/CSS</li>
-              <li>JavaScript</li>
-              <ul><li class="sub-li">ReactJS</li>
-                <li class="sub-li">Node.js</li></ul>
-            </ul>
-          </p>
+            <p>Coding Experience:</p>
+              <ul>
+                <li>Java</li>
+                  <ul><li class="sub-li">JavaFX</li></ul>
+                <li>Kotlin</li>
+                  <ul><li class="sub-li">TornadoFX</li></ul>
+                <li>Scala</li>
+                <li>Python</li>
+                  <ul><li class="sub-li">SciKitLearn</li></ul>
+                <li>HTML/CSS</li>
+                <li>JavaScript</li>
+                  <ul><li class="sub-li">ReactJS</li>
+                  <li class="sub-li">Node.js</li></ul>
+              </ul>
           </div>
 
           <input type="radio" name="tabs" id="portfolio">
@@ -106,7 +105,7 @@
               <input type="text" id="email" name="email"><br><br>
 
               <label for="message">Message:</label>
-              <input type="textarea" id="message" name="message"><br><br>
+              <input type="text" id="message" name="message"><br><br>
 
               <button type="submit">Submit</button>
             </form>
@@ -117,9 +116,9 @@
 
       <!-- BOTTOM LEFT ICONS -->
       <div class="icon-bar">
-        <a href="https://www.linkedin.com/in/kimberly-anne/"><img src="img/linkedin.png"></a>
-        <a href="https://github.com/k-horton"><img src="img/github.png"></a>
-        <a href="mailto:kimberlyannehorton@gmail.com"><img src="img/email.png"></a>
+        <a href="https://www.linkedin.com/in/kimberly-anne/"><img src="img/linkedin.png" alt="linkedin logo icon"></a>
+        <a href="https://github.com/k-horton"><img src="img/github.png" alt="github logo icon"></a>
+        <a href="mailto:kimberlyannehorton@gmail.com"><img src="img/email.png" alt="email envelope icon"></a>
       </div>
     </div>
     </body>
