added problem and software pages

--- a/gcsp.html
+++ b/gcsp.html
@@ -18,6 +18,8 @@
       <h2>Grand Challenge Scholars Program</h2>
       <a href="index.html"><div class="sidebar-link">Home</div></a>
       <a href="/"><div class="sidebar-link sidebar-current">GCSP</div></a>
+      <a href="problem.html"><div class="sub sidebar-link">The Problem</div></a>
+      <a href="software.html"><div class="sub sidebar-link">The Software</div></a>
     </div>
 
     <div id="body">
