added global CSS stylesheet

--- a/problem.html
+++ b/problem.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="stylesheet" href="gcsp.css">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="gcsp.css"> <!-- TODO: remove once grid display -->
+    <link rel="stylesheet" href="problem.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="Grand Challenge Scholars Program"
@@ -18,18 +20,27 @@
       <h2>Grand Challenge Scholars Program</h2>
       <a href="index.html"><div class="sidebar-link">Home</div></a>
       <a href="gcsp.html"><div class="sidebar-link sidebar-current">GCSP</div></a>
-      <a href="/"><div class="sub sidebar-link">The Problem</div></a>
+      <a href="problem.html"><div class="sub sidebar-link">The Problem</div></a>
       <a href="software.html"><div class="sub sidebar-link">The Software</div></a>
     </div>
 
-    <div id="body">
-      <div class="center-p">
+    <div id="body" class="main-body">
         <h1>The Problem</h1>
-        <img id="profile-pic" src="img/kimberly.jpg">
-        <p>I am a Christian, student, and programmer in Portland, Oregon with homes around the world in Malaysia, Jordan, and across the United States.</p>
-        <p>I am a lifelong follower of Christ, and I believe his call to serve the poor and underprivileged was meant to be taken seriously. I also believe there is great need in the humanitarian sector for technical experience to come alongside existing efforts in communication and fieldwork; I seek to use my technical experience to bring efficiency and new solutions to those already on the front lines fighting for justice and human flourishing.</p>
-        <p>Technology is a powerful tool, and I believe it should be harnessed and stewarded responsibly to the benefit of the world at large. I hope to be a part of the movements working for justice and against suffering by learning to steward technology rightly and using it to advance quality of life around the world.</p>
-      </div>
+        <img id="peru-tapstand" src="img/failed-tapstand-peru.png">
+        <p><em>There's something rotten in the state of the humanitarian sector.</em> And it isn't the hearts of
+        the men and women working tirelessly to find solutions for problems like poor water quality or
+        sanitation--through no fault of their own, some solutions haven't stayed permanent.</p>
+
+        <p>Projects like digging a well in an impoverished African village or building latrines for a
+        small community in Latin America can be life-changing for the people affected--but too often we count
+        the installation a success without checking in on the aftermath; and we're finding that our
+        solutions aren't as sustainable as we'd hoped. Pictured to the right is a water tapstand installed
+        in Peru--unused and beginning to corrode. There are countless stories of similarly unused projects:
+        wells dried up, sewage systems untouched, community maintenance groups disbanded.</p>
+
+        <p><em>What's going wrong?</em> There's not an easy answer--each community's story is different,
+        and so are the factors affecting the sustainability of new developments. That's where the process of
+        <strong>Iterative Factor-Mapping and Learning</strong> (IFML) comes in.</p>
     </div>
 
     </body>
