--- a/software.html
+++ b/software.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="stylesheet" href="gcsp.css">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="gcsp.css"> <!-- TODO: remove once grid display -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="Grand Challenge Scholars Program"
@@ -19,7 +20,7 @@
       <a href="index.html"><div class="sidebar-link">Home</div></a>
       <a href="gcsp.html"><div class="sidebar-link sidebar-current">GCSP</div></a>
       <a href="problem.html"><div class="sub sidebar-link">The Problem</div></a>
-      <a href="/"><div class="sub sidebar-link">The Software</div></a>
+      <a href="software.html"><div class="sub sidebar-link">The Software</div></a>
     </div>
 
     <div id="body">
