--- a/software.html
+++ b/software.html
@@ -24,12 +24,9 @@
     </div>
 
     <div id="body">
-      <div class="center-p">
+      <div class="main-body">
         <h1>The Software</h1>
-        <img id="profile-pic" src="img/kimberly.jpg">
-        <p>I am a Christian, student, and programmer in Portland, Oregon with homes around the world in Malaysia, Jordan, and across the United States.</p>
-        <p>I am a lifelong follower of Christ, and I believe his call to serve the poor and underprivileged was meant to be taken seriously. I also believe there is great need in the humanitarian sector for technical experience to come alongside existing efforts in communication and fieldwork; I seek to use my technical experience to bring efficiency and new solutions to those already on the front lines fighting for justice and human flourishing.</p>
-        <p>Technology is a powerful tool, and I believe it should be harnessed and stewarded responsibly to the benefit of the world at large. I hope to be a part of the movements working for justice and against suffering by learning to steward technology rightly and using it to advance quality of life around the world.</p>
+        <p>Lorem ipsum dolor set amet.</p>
       </div>
     </div>
 
