--- a/problem.html
+++ b/problem.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="gcsp.css"> <!-- TODO: remove once grid display -->
     <link rel="stylesheet" href="problem.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
@@ -15,33 +14,36 @@
   </head>
 
   <body>
-    <div id="sidebar">
-      <h1>kimberly horton</h1>
-      <h2>Grand Challenge Scholars Program</h2>
-      <a href="index.html"><div class="sidebar-link">Home</div></a>
-      <a href="gcsp.html"><div class="sidebar-link sidebar-current">GCSP</div></a>
-      <a href="problem.html"><div class="sub sidebar-link">The Problem</div></a>
-      <a href="software.html"><div class="sub sidebar-link">The Software</div></a>
+    <div id="grid-layout">
+      <div id="sidebar">
+        <h1>kimberly horton</h1>
+        <h2>Grand Challenge Scholars Program</h2>
+        <a href="index.html"><div class="sidebar-link">Home</div></a>
+        <a href="gcsp.html"><div class="sidebar-link sidebar-current">GCSP</div></a>
+        <a href="problem.html"><div class="sub sidebar-link">The Problem</div></a>
+        <a href="software.html"><div class="sub sidebar-link">The Software</div></a>
+      </div>
+
+      <div id="main-content">
+        <div class="main-body">
+          <h1>The Problem</h1>
+          <img id="peru-tapstand" src="img/failed-tapstand-peru.png">
+          <p><em>There's something rotten in the state of the humanitarian sector.</em> And it isn't the hearts of
+          the men and women working tirelessly to find solutions for problems like poor water quality or
+          sanitation--through no fault of their own, some solutions haven't stayed permanent.</p>
+
+          <p>Projects like digging a well in an impoverished African village or building latrines for a
+          small community in Latin America can be life-changing for the people affected--but too often we count
+          the installation a success without checking in on the aftermath; and we're finding that our
+          solutions aren't as sustainable as we'd hoped. Pictured to the right is a water tapstand installed
+          in Peru--unused and beginning to corrode. There are countless stories of similarly unused projects:
+          wells dried up, sewage systems untouched, community maintenance groups disbanded.</p>
+
+          <p><em>What's going wrong?</em> There's not an easy answer--each community's story is different,
+          and so are the factors affecting the sustainability of new developments. That's where the process of
+          <strong>Iterative Factor-Mapping and Learning</strong> (IFML) comes in.</p>
+        </div>
+      </div>
     </div>
-
-    <div id="body" class="main-body">
-        <h1>The Problem</h1>
-        <img id="peru-tapstand" src="img/failed-tapstand-peru.png">
-        <p><em>There's something rotten in the state of the humanitarian sector.</em> And it isn't the hearts of
-        the men and women working tirelessly to find solutions for problems like poor water quality or
-        sanitation--through no fault of their own, some solutions haven't stayed permanent.</p>
-
-        <p>Projects like digging a well in an impoverished African village or building latrines for a
-        small community in Latin America can be life-changing for the people affected--but too often we count
-        the installation a success without checking in on the aftermath; and we're finding that our
-        solutions aren't as sustainable as we'd hoped. Pictured to the right is a water tapstand installed
-        in Peru--unused and beginning to corrode. There are countless stories of similarly unused projects:
-        wells dried up, sewage systems untouched, community maintenance groups disbanded.</p>
-
-        <p><em>What's going wrong?</em> There's not an easy answer--each community's story is different,
-        and so are the factors affecting the sustainability of new developments. That's where the process of
-        <strong>Iterative Factor-Mapping and Learning</strong> (IFML) comes in.</p>
-    </div>
-
-    </body>
+  </body>
 </html>
