--- a/software.html
+++ b/software.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="gcsp.css"> <!-- TODO: remove once grid display -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="Grand Challenge Scholars Program"
@@ -14,21 +13,22 @@
   </head>
 
   <body>
-    <div id="sidebar">
-      <h1>kimberly horton</h1>
-      <h2>Grand Challenge Scholars Program</h2>
-      <a href="index.html"><div class="sidebar-link">Home</div></a>
-      <a href="gcsp.html"><div class="sidebar-link sidebar-current">GCSP</div></a>
-      <a href="problem.html"><div class="sub sidebar-link">The Problem</div></a>
-      <a href="software.html"><div class="sub sidebar-link">The Software</div></a>
-    </div>
+    <div id="grid-layout">
+      <div id="sidebar">
+        <h1>kimberly horton</h1>
+        <h2>Grand Challenge Scholars Program</h2>
+        <a href="index.html"><div class="sidebar-link">Home</div></a>
+        <a href="gcsp.html"><div class="sidebar-link sidebar-current">GCSP</div></a>
+        <a href="problem.html"><div class="sub sidebar-link">The Problem</div></a>
+        <a href="software.html"><div class="sub sidebar-link">The Software</div></a>
+      </div>
 
-    <div id="body">
-      <div class="main-body">
-        <h1>The Software</h1>
-        <p>Lorem ipsum dolor set amet.</p>
+      <div id="main-content">
+        <div class="main-body">
+          <h1>The Software</h1>
+          <p>Lorem ipsum dolor set amet.</p>
+        </div>
       </div>
     </div>
-
-    </body>
+  </body>
 </html>
