--- a/software.html
+++ b/software.html
@@ -26,7 +26,14 @@
       <div id="main-content">
         <div class="main-body">
           <h1>The Software</h1>
-          <p>Lorem ipsum dolor set amet.</p>
+          <p>Planned Features:
+            <ul>
+              <li>Graphical representation of feedback loops and factor influence & dependence</li>
+              <li>Ranked analysis of balanced and reinforcing loops</li>
+              <li>Intuitive, internationalized user displays</li>
+            </ul></p>
+
+          <p>Screenshots Coming Soon!</p>
         </div>
       </div>
     </div>
