added image alts to meet W3 standards

--- a/problem.html
+++ b/problem.html
@@ -27,7 +27,7 @@
       <div id="main-content">
         <div class="main-body">
           <h1>The Problem</h1>
-          <img id="peru-tapstand" src="img/failed-tapstand-peru.png">
+          <img id="peru-tapstand" src="img/failed-tapstand-peru.png" alt="a failed tapstand built in peru">
           <p><em>There's something rotten in the state of the humanitarian sector.</em> And it isn't the hearts of
           the men and women working tirelessly to find solutions for problems like poor water quality or
           sanitation--through no fault of their own, some solutions haven't stayed permanent.</p>
