--- a/software.html
+++ b/software.html
@@ -26,12 +26,12 @@
       <div id="main-content">
         <div class="main-body">
           <h1>The Software</h1>
-          <p>Planned Features:
+          <p>Planned Features:</p>
             <ul>
               <li>Graphical representation of feedback loops and factor influence & dependence</li>
               <li>Ranked analysis of balanced and reinforcing loops</li>
               <li>Intuitive, internationalized user displays</li>
-            </ul></p>
+            </ul>
 
           <p>Screenshots Coming Soon!</p>
         </div>
