--- a/gcsp.html
+++ b/gcsp.html
@@ -38,19 +38,19 @@
                 <p>I am a lifelong follower of Christ, and I believe his call to serve the poor and underprivileged was meant to be taken seriously. I also believe there is great need in the humanitarian sector for technical experience to come alongside existing efforts in communication and fieldwork; I seek to use my technical experience to bring efficiency and new solutions to those already on the front lines fighting for justice and human flourishing.</p>
                 <p>Technology is a powerful tool, and I believe it should be harnessed and stewarded responsibly to the benefit of the world at large. I hope to be a part of the movements working for justice and against suffering by learning to steward technology rightly and using it to advance quality of life around the world.</p>
               </td>
-            <td><img id="profile-pic" src="img/kimberly.jpg"></td>
+            <td><img id="profile-pic" src="img/kimberly.jpg" alt="kimberly smiling in front of an Amman, Jordan cityscape behind a window"></td>
           </tr></table>
               <br>
           <!-- Water & Learning Descriptions -->
           <table id="waterAndLearning">
             <tr>
               <td>
-                <img id="water" src="img/water.png">
+                <img id="water" src="img/water.png" alt="icon of hands reaching for a water droplet">
                 <h1>Provide Access to Clean Water</h1>
                 <p><strong>Lack of clean water is responsible for more deaths in the world than war.</strong> About 1 out of every 6 people living today do not have adequate access to water, and more than double that number lack basic sanitation, for which water is needed. In some countries, half the population does not have access to safe drinking water, and hence is afflicted with poor health. By some estimates, each day nearly 5,000 children worldwide die from diarrhea-related diseases, a toll that would drop dramatically if sufficient water for sanitation was available.</p>
               </td>
               <td>
-                <img id="learning" src="img/learning.png">
+                <img id="learning" src="img/learning.png" alt="silhouette of a head with a gear-cog inside">
                 <h1>Advance Personalized Learning</h1>
                 <p>Throughout the educational system, teaching has traditionally followed a one-size-fits-all approach to learning, with a single set of instructions provided identically to everybody in a given class, regardless of differences in aptitude or interest. Similar inflexibility has persisted in adult education programs that ignore differences in age, cultural background, occupation, and level of motivation.</p>
                 <p>In recent years, a growing appreciation of individual preferences and aptitudes has led toward more “personalized learning,” in which instruction is tailored to a student’s individual needs. Personal learning approaches range from modules that students can master at their own pace to computer programs designed to match the way it presents content with a learner’s personality.</p>
