--- a/gcsp/problem.html
+++ b/gcsp/problem.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="../global.css">
     <link rel="stylesheet" href="problem.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
@@ -18,7 +18,7 @@
       <div id="sidebar">
         <h1>kimberly horton</h1>
         <h2>Grand Challenge Scholars Program</h2>
-        <a href="index.html"><div class="sidebar-link">Home</div></a>
+        <a href="../index.html"><div class="sidebar-link">Home</div></a>
         <a href="gcsp.html"><div class="sidebar-link sidebar-current">GCSP</div></a>
         <a href="problem.html"><div class="sub sidebar-link">The Problem</div></a>
         <a href="software.html"><div class="sub sidebar-link">The Software</div></a>
@@ -27,7 +27,7 @@
       <div id="main-content">
         <div class="main-body">
           <h1>The Problem</h1>
-          <img id="peru-tapstand" src="img/failed-tapstand-peru.png" alt="a failed tapstand built in peru">
+          <img id="peru-tapstand" src="../img/failed-tapstand-peru.png" alt="a failed tapstand built in peru">
           <p><em>There's something rotten in the state of the humanitarian sector.</em> And it isn't the hearts of
           the men and women working tirelessly to find solutions for problems like poor water quality or
           sanitation--through no fault of their own, some solutions haven't stayed permanent.</p>
