--- a/gcsp/software.html
+++ b/gcsp/software.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="../global.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="Grand Challenge Scholars Program"
@@ -17,7 +17,7 @@
       <div id="sidebar">
         <h1>kimberly horton</h1>
         <h2>Grand Challenge Scholars Program</h2>
-        <a href="index.html"><div class="sidebar-link">Home</div></a>
+        <a href="../index.html"><div class="sidebar-link">Home</div></a>
         <a href="gcsp.html"><div class="sidebar-link sidebar-current">GCSP</div></a>
         <a href="problem.html"><div class="sub sidebar-link">The Problem</div></a>
         <a href="software.html"><div class="sub sidebar-link">The Software</div></a>
