--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <h1>kimberly horton</h1>
         <h2>GitHub Pages Home</h2>
         <a href="/"><div class="sidebar-link sidebar-current">Home</div></a>
-        <a href="gcsp.html"><div class="sidebar-link">GCSP</div></a>
+        <a href="gcsp/gcsp.html"><div class="sidebar-link">GCSP</div></a>
+        <h2>CSIS304 Projects</h2>
+        <a href="culture/index.html"><div class="sidebar-link">1: Culture</div></a>
+        <a href="zen/index.html"><div class="sidebar-link wip">2: Zen Garden</div></a>
       </div>
 
       <!-- BODY -->
